Fixed Splashscreen font size on mobile devices

--- a/src/components/Splashscreen/Splashscreen.css
+++ b/src/components/Splashscreen/Splashscreen.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: xx-large;
+  font-size: 5vw;
   cursor: pointer;
 }
 
